fixed the issue with the technologies ctnr, the cirlces are now perfectly circular and will never shift to ovular

--- a/website/static/scss/_index.scss
+++ b/website/static/scss/_index.scss
@@ -301,6 +301,7 @@
         display: flex;            
         padding: 1em;
         width: 2rem;
+        height: 2rem;
         img{
             width: 100%;
         }
